[FIX] Correct tiktok link, align checkbox and span and add space before Privacy link

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -553,7 +553,7 @@ body {
 /* Checkbox Styling */
 .checkbox {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
   margin: 0.5rem 0;
 }
